<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView7">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/enter_guest_details"
                android:id="@+id/textView"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:layout_marginBottom="20dp" />

            <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carNo"
        android:hint="@string/enter_car_number"
        android:layout_below="@+id/textView"
        android:textColor="#000000"
        android:paddingTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mobNo"
        android:hint="@string/enter_mobile_no"
        android:inputType="phone"
        android:layout_below="@+id/carNo"
        android:textColor="#000000" />

            <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goutput"
        android:textColor="#000000"
        android:textSize="20dp"
                android:clickable="true"
        android:layout_marginTop="46dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkin"
                android:id="@+id/gcheckinTime"
                android:textColor="#ffffff"
                android:background="@drawable/round_button"
                android:drawableEnd="@mipmap/ic_checkin"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="82dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>




</RelativeLayout>
