<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_car_number"
                android:textSize="20dp"
                android:textColor="#000000"
                android:id="@+id/carNumEditText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/search"
                android:textColor="#ffffff"
                android:background="@drawable/round_button"
                android:drawableEnd="@mipmap/ic_action_search"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/output"
            android:textColor="#000000"
            android:layout_below="@+id/search"
            android:textSize="20dp"
            android:layout_marginTop="30dp"/>




    <ProgressBar
        android:id="@+id/alert_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimary"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_locked_alert"
            android:id="@+id/sendCarLockedAlert"
            android:textColor="#ffffff"
            android:background="@drawable/round_button"
            android:drawableEnd="@mipmap/ic_lock"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="17dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_night_parking_alert"
            android:id="@+id/sendNightAlert"
            android:textColor="#ffffff"
            android:background="@drawable/round_button"
            android:drawableEnd="@mipmap/ic_night_parking"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_parking_alert"
            android:id="@+id/sendWrongParkingAlert"
            android:textColor="#ffffff"
            android:background="@drawable/round_button"
            android:drawableEnd="@mipmap/ic_wrong_parking"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="23dp" />

    </LinearLayout>

</ScrollView>


</LinearLayout>
