<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/checkinRegisteredLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView6">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_car_number"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/output"
            android:textColor="#000000"
            android:layout_below="@+id/search"
            android:textSize="20dp"
            android:layout_marginTop="44dp"/>
    </LinearLayout>
</ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/search"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@drawable/round_button"
        android:drawableEnd="@mipmap/ic_action_search"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/scrollView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkin"
        android:visibility="invisible"
        android:textColor="#ffffff"
        android:background="@drawable/round_button"
        android:id="@+id/checkinTime"
        android:clickable="true"
        android:drawableEnd="@mipmap/ic_checkin"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/search"
        android:layout_alignEnd="@+id/scrollView6"
        android:layout_marginTop="68dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:visibility="invisible"
        android:textColor="#ffffff"
        android:background="@drawable/round_button"
        android:id="@+id/checkoutTime"
        android:clickable="true"
        android:drawableEnd="@mipmap/ic_checkout"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/scrollView6" />


</RelativeLayout>
