<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"/>

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/register_progress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:shrinkColumns="1"
                android:stretchColumns="1">


                <TableRow>
                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/name"
                        android:layout_column="0"
                        android:layout_marginRight="100dp"
                        android:textColor="#000000"/>



                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eName"
                        android:layout_column="1"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_number"
                        android:id="@+id/carNum"
                        android:layout_column="0"
                        android:textColor="#000000"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eCarNum"
                        android:layout_column="1"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:id="@+id/mobNum"
                        android:layout_column="0"
                        android:textColor="#000000"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eMobNum"
                        android:layout_column="1"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_id"
                        android:id="@+id/email"
                        android:layout_column="0"
                        android:textColor="#000000"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eEmail"
                        android:layout_column="1"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sticker_number"
                        android:id="@+id/sticker"
                        android:layout_column="0"
                        android:textColor="#000000"/>

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eSticker"
                        android:layout_column="1"/>
                </TableRow>

                <TableRow android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="30dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:id="@+id/save"
                        android:textColor="#ffffff"
                        android:background="@drawable/round_button"
                        android:drawableEnd="@mipmap/ic_content_save"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </ScrollView>




</RelativeLayout>